--- a/Public/index.html
+++ b/Public/index.html
@@ -5,16 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Game</title>
     <link rel="stylesheet" href="style.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
     <div class="quiz-container">
-        <h1>Welcome to the Quiz Game</h1>
-        <div id="question-container">
-            <p id="question"></p>
-            <div id="options"></div>
-        </div>
-        <button id="next-button" onclick="nextQuestion()">Next</button>
+        <h1>Quiz Game</h1>
+        <h2 id="question">Loading...</h2>
+        <div id="options"></div>
+        <p id="score">Score: 0</p>
     </div>
-    <script src="app.js"></script>
 </body>
 </html>
+
